# docs-rs-mcp-server

./: .cursorrules  .gitignore  Cargo.toml  README.md  justfile
docs-mcp/src/tools/: mod.rs
docs-rs-mcp/: Cargo.toml
docs-rs-mcp/src/: README.md  lib.rs  main.rs
docs-rs-mcp/src/tools/: crate_info.rs  crate_items.rs  get_struct_docs.rs  mod.rs
docs-rs-mcp/test-data/: list-of-all-items-scraper-0.22.0.html  list-of-all-items-tokio-1.43.0.html  surreal-struct-surrealdb.html
docs-rs-mcp/test-data/get_struct_docs/: opentelemetry-sdk-0.28.0-all-items.html  opentelemetry-sdk-0.28.0-tracer-provider-builder.html
docs-rs-mcp/tests/: crate_info_test.rs  crate_items_test.rs  get_struct_docs_test.rs  integration_tests.rs  tools_list_test.rs
instructions/: get_struct_docs.md  initial-spec.md  reqwest-scraper.md
scripts/: install-claude-config.rs  install-claude-config.sh  stdin-test.rs
