[workspace]
members = ["docs-rs-mcp"]
exclude = ["~/.cargo-target/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
wildcard_imports = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
enum_glob_use = "deny"
module_name_repetitions = { level = "allow", priority = 1 }
future_not_send = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
all = { level = "warn", priority = -1 }
pedantic = "deny"
unwrap_used = "deny"

[workspace.metadata.cyclonedx]
included_dependencies = "all"
